perf(core): avoid redundant owner publication and change-buffer probes